WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133116
Double-tap zoom does not take obscuring insets into account
https://bugs.webkit.org/show_bug.cgi?id=133116
Summary
Double-tap zoom does not take obscuring insets into account
Antti Koivisto
Reported
2014-05-20 04:10:01 PDT
We zoom as if there was nothing obscuring the view.
Attachments
patch
(3.60 KB, patch)
2014-05-20 06:23 PDT
,
Antti Koivisto
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-05-20 04:10:31 PDT
<
rdar://problem/16765604
>
Antti Koivisto
Comment 2
2014-05-20 06:23:48 PDT
Created
attachment 231765
[details]
patch
Antti Koivisto
Comment 3
2014-05-20 06:57:36 PDT
https://trac.webkit.org/r169109
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug