Double-tap zoom does not take obscuring insets into account https://bugs.webkit.org/show_bug.cgi?id=133116 <rdar://problem/16765604>

Reviewed by Anders Carlsson.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _zoomToRect:WebCore::atScale:origin:WebCore::]):

    Compute the zoom target taking insets into account.



Canonical link: https://commits.webkit.org/151136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169109 268f45cc-cd09-0410-ab3c-d52691b4dbfc